# whoop-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
whoop_sdk/: auth.py  client.py
