[project]
name = "whoop-sdk"
version = "0.1.0"
description = "A modern Python SDK for the WHOOP Developer API (v2)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Eric Flynn", email = "ejflynn27@gmail.com" }]
dependencies = [
  "requests",
  "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/ericfflynn/whoop-sdk"
Repository = "https://github.com/ericfflynn/whoop-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whoop_sdk"]